--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
 	<!-- CUSTOM CSS -->
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="index2.css">
 
 	<!-- GOOGLE FONTS -->
 		<!-- Bebas Neue, Open Sans, Questrial-->
@@ -25,27 +25,30 @@
 		<!-- FLOATING -->
 		<div id="floating" class="col-lg-1 offset-lg-11 bg-dark d-lg-flex align-items-center justify-content-center h-100">
 			<div class="row">
-				<img src="./images/lettering2.png">			
+				<!-- <img src="./images/lettering.jpg">	 -->		
 			</div>			
 		</div>
 		<!-- end of FLOATING -->
 
 		<!-- SIDEBAR -->
 		
-			<div id="sidebar" class="col-md-3 col-lg-2 bg-dark d-md-inline-block h-100 pb-5 text-light">
+			<div id="sidebar" class="col-md-3 col-lg-2 bg-light d-md-inline-block h-100 pb-5 text-dark">
 				
 				<!-- HEADER text -->
 				<div class="row d-flex justify-content-center align-items-center">
 					<div id="sidebar-title" class="col text-center">
 						<div class="row py-md-5 py-lg-3">
 							<div class="col-12">
-								<h2 id="text-1" class="mt-4 py-0 mb-0">KLAUS</h2>
-								<h4 id="text-2" class="pt-0">Hargreeves</h4>					
+								<h2 id="text-1" class="mt-4 py-0 mb-0">RAF</h2>
+								<h4 id="text-2" class="pt-0">Santillan</h4>					
 							</div>
 						</div>
 						<div class="row my-5">
 							<div class="col-12">
-								<h5 id="text-3">Web Developer</h5>
+								<h5 class="py-2" id="text-3">Web Development</h5>
+								<h5 class="py-2" id="text-3">Graphic Design</h5>
+								<h5 class="py-2" id="text-3">Architecture</h5>
+
 							</div>
 						</div>				
 					</div>
@@ -75,16 +78,16 @@
 				<!-- WEBPAGE hotlinks -->
 				<div id="hotlinks" class="row bg-transparent d-flex flex-column justify-content-center align-items-center mt-4 mb-4 py-5 ">
 					<div class="card-header col text-center" >
-						<a class="card-header col" href="#"><button class="btn text-light btn-outline-light">Home</button></a>
+						<a href="#"><button class="btn text-dark btn-outline-secondary">Home</button></a>
 					</div>	
 					<div class="card-header col text-center" >
-						<a href="#"><button class="btn text-light btn-outline-light ">About Me</button></a>
+						<a href="#"><button class="btn text-dark btn-outline-secondary">About Me</button></a>
 					</div>
 					<div class="card-header col text-center" >
-						<a href="#"><button class="btn text-light btn-outline-light ">Projects</button></a>
+						<a href="#"><button class="btn text-dark btn-outline-secondary">Projects</button></a>
 					</div>
 					<div class="card-header col text-center" >
-						<a href="#"><button class="btn text-light btn-outline-light ">Contact</button></a>
+						<a href="#"><button class="btn text-dark btn-outline-secondary">Contact</button></a>
 					</div>
 				</div>
 				<!-- end of WEBPAGE hotlinks -->
@@ -100,7 +103,7 @@
 			<div class="row d-block sticky-top">
 				<nav id="navbar-mobile" class="navbar navbar-dark bg-dark d-md-none">
 				  <img width="30px" class="img-fluid" src="./images/umbrella.png">
-				  <a class="navbar-brand" href="#">Klaus Hargreeves</a>
+				  <a class="navbar-brand" href="#">RAF SANTILLAN</a>
 				  
 				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				    <span class="navbar-toggler-icon"></span>
@@ -134,14 +137,14 @@
 
 			
 			<!-- ABOUT ME -->
-			<div class="row bg-warning d-flex">
+			<div class="row bg-dark d-flex">
 				<div class="container-fluid h-50">
 					<div class="row py-4 px-0 mt-4 h-50">
 						<div class="col-md-3 justify-content-end p-3 order-2 order-md-1 d-none d-md-flex">
 							<img class="img-fluid" src="./images/four.png">
 						</div>
 						<div class="col-md-6 col-12 d-flex justify-content-center align-items-center order-1 order-md-2">
-							<img class="img-fluid" src="./images/seance.png">
+							<img class="img-fluid" src="./images/aboutme.png">
 						</div>
 						<div class="col-md-3 justify-content-start p-3 order-3 d-none d-md-flex">
 							<img class="img-fluid" src="./images/umbrella.png">
@@ -150,11 +153,11 @@
 				</div>
 				<div class="container-fluid">
 					<div class="row py-4 px-0">
-						<div class="col-12 col-md-6 d-flex align-items-center container-fluid">
-							<img class="img-fluid" src="./images/klaus2.jpg">
+						<div class="offset-lg-4 col-lg-4 offset-md-3 col-md-6 offset-2 col-8 d-flex align-items-center container-fluid">
+							<img class="rounded-circle img-thumbnail img-fluid" src="./images/portrait2.jpg">
 						</div>
-						<div class="col-12 col-md-6">
-							<p id="paragraph" class="text-justify">
+						<div id="about-me-text" class="col-10 offset-1 col-md-8 offset-md-2 py-4 bg-info">
+							<p id="paragraph" class="text-center">
 								Klaus Hargreeves, also known as Number Four or by his superhero alter-ego The Séance, is the fourth member of the Umbrella Academy. Klaus's powers are speaking with the dead, channeling the dead so they speak through him, possessing people, broadcasting his consciousness through airwaves (allowing him to communicate through TVs), and telekinesis. In the television adaptation, he also has the power of evocation, making spirits corporeal, capable of being seen by others and interacting with objects around them, and the ability to resurrect himself from death. Of his comic powers, he retains only the ability to speak to the dead in the television adaptation, although he does not require a Ouija board to do so
 							</p>
 						</div>
