--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 					<div id="sidebar-title" class="col text-center">
 						<div class="row py-md-5 py-lg-3">
 							<div class="col-12">
-								<h2 id="text-1" class="mt-4 py-0 mb-0">RAF</h2>
+								<!-- <h2 id="text-1" class="mt-4 py-0 mb-0">RAF</h2> -->
+								<div>
+									<img class="img-fluid" src="./images/raf2.png">
+								</div>
 								<h4 id="text-2" class="pt-0">Santillan</h4>					
 							</div>
 						</div>
