Applied minor revisions

--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
 				<!-- WEBPAGE hotlinks -->
 				<div id="hotlinks" class="row bg-transparent d-flex flex-column justify-content-center align-items-center mt-4 mb-4 py-5 ">
 					<div class="card-header col text-center" >
-						<a href="#landing"><button class="btn text-dark btn-outline-secondary">Home</button></a>
+						<a href="#landing"><button class="btn text-light btn-outline-secondary btn-home">Home</button></a>
 					</div>	
 					<div class="card-header col text-center" >
-						<a href="#about"><button class="btn text-dark btn-outline-secondary">About Me</button></a>
+						<a href="#about"><button class="btn text-light btn-outline-secondary btn-about">About Me</button></a>
 					</div>
 					<div class="card-header col text-center" >
-						<a href="#projects"><button class="btn text-dark btn-outline-secondary">Projects</button></a>
+						<a href="#projects"><button class="btn text-light btn-outline-secondary btn-proj">Projects</button></a>
 					</div>
 					<div class="card-header col text-center" >
-						<a href="#contact"><button class="btn text-dark btn-outline-secondary">Contact</button></a>
+						<a href="#contact"><button class="btn text-light btn-outline-secondary btn-contact">Contact</button></a>
 					</div>
 				</div>
 				<!-- end of WEBPAGE hotlinks -->
@@ -169,10 +169,10 @@
 						</div>
 						<div id="about-me-text" class="col-10 offset-1 col-md-8 offset-md-2 py-4 bg-info">
 							<p id="paragraph" class="text-center">
-								Rafael Vien Santillan is a graduate from the University of the Philippines Diliman with a degree in architecture.  
+								Rafael Vien Santillan is a graduate of the University of the Philippines Diliman with a degree in Architecture.  
 							</p>
 							<p id="paragraph" class="text-center">
-								With a growing passion for the digital arts, he is adept with many design tools and languages that makes him a complete package for everyone's content creation needs.
+								With his growing passion for the digital arts, he is adept in many design tools and languages that makes him a complete package for everyone's content creation needs.
 							</p>
 							<p id="paragraph" class="text-center">
 								As a student of Zuitt bootcamp his current love for designing has reached a new level. With that bringing him closer to become a well-rounded full-stack engineer. 
@@ -214,7 +214,7 @@
 								<div class="card my-3 p-3 row bg-dark text-light">
 									<h2>ARCHITECTURE</h2>
 									<p class="text-justify">
-										Working for an small architectural design firm has led Raf to an array of architectural marvels- from classy interior design projects to budget friendly home renovations. His love for designing spaces is his first and one of his true passions. 
+										Working for a small architectural design studio has led Raf to work on a selection of architectural projects— from classy interior design projects to budget-friendly home renovations. His love for designing spaces is his first and one of his true passions. 
 									</p>
 								</div>
 							</div>
@@ -228,7 +228,7 @@
 								<div class="card my-3 p-3 row bg-danger text-light order-lg-1">
 									<h2>GRAPHIC DESIGN</h2>
 									<p class="text-justify">
-										Raf is a co-owner of a graphic design service studio called ToeBeans Studio which focuses on vector art and illustrations. Some of his works includes logo and branding designs, vector artwork commisions and, visual presentation projects.
+										Raf is a co-owner of ToeBeans Studio a graphic design studio focusing on vector art and illustrations for pet lovers. Some of his works include logo design and branding, vector artwoks and, digital presentation projects for companies.
 									</p>
 								</div>
 							</div>
@@ -242,7 +242,7 @@
 								<div class="card my-3 p-3 row bg-info text-light">
 									<h2>WEB DEVELOPMENT</h2>
 									<p class="text-justify">
-										Raf is currently adept in designing front-end web development thru HTML, CSS and Bootstrap. Soon to become a master of both front-end and back-end web development. And hopefully a full-stack engineer in the future.
+										Raf is currently adept in designing front-end web development using HTML, CSS and Bootstrap. He aspires to become a master of front-end and back-end web development and, hopefully become a full-stack engineer in the future.
 
 									</p>
 								</div>
@@ -290,7 +290,7 @@
 
 					<!-- CONTACT FORM -->
 					<div class="row mt-5">
-						<div class=" col-12 col-md-8 offset-md-2 col-xl-4 offset-xl-4 bg-danger text-center py-3">
+						<div class=" col-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 bg-danger text-center py-3">
 							<form>
 								<div class="form-group">
 								    <label class="text-light" for="name">Name</label>
@@ -325,7 +325,7 @@
 									</div>
 								</div>
 								
-								<button type="button" class="btn btn-light" data-toggle="modal" data-target="#modal">Send email</button>
+								<button type="button" class="btn btn-light btn-send" data-toggle="modal" data-target="#modal">Send email</button>
 
 								<div class="modal fade text-dark" id="modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
 								  <div class="modal-dialog modal-dialog-centered">
