Applied minor revisions - fixed sidebar for laptop screen resolutions v2

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 		<!-- SIDEBAR -->
 		
-			<div id="sidebar" class="col-md-3 col-lg-2 bg-light d-md-inline-block min-vh-100 ">
+			<div id="sidebar" class="col-md-3 col-lg-2 bg-light d-md-inline-block">
 				
 				<!-- HEADER text -->
 				<div class="row d-flex justify-content-center align-items-center">
