--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<div class="container-fluid">
 					<div class="row py-4 px-0">
 						<div class="offset-lg-4 col-lg-4 offset-md-3 col-md-6 offset-2 col-8 d-flex align-items-center container-fluid">
-							<img class="rounded-circle img-thumbnail img-fluid" src="./images/portrait2.jpg">
+							<img class="img-fluid" src="./images/portrait.png">
 						</div>
 						<div id="about-me-text" class="col-10 offset-1 col-md-8 offset-md-2 py-4 bg-info">
 							<p id="paragraph" class="text-center">
