--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 						</div>
 						<div class="row my-5">
 							<div class="col-12">
-								<h5 class="py-2" id="text-3">Web Development</h5>
-								<h5 class="py-2" id="text-3">Graphic Design</h5>
-								<h5 class="py-2" id="text-3">Architecture</h5>
+								<a href="#cardarki" class="text-dark"><h5 class="py-2" id="text-3">Architecture</h5></a>
+								<a href="#cardgd" class="text-dark"><h5 class="py-2" id="text-3">Graphic Design</h5></a>
+								<a href="#cardwebdev" class="text-dark"><h5 class="py-2" id="text-3">Web Development</h5></a>
 
 							</div>
 						</div>				
@@ -173,10 +173,10 @@
 								Rafael Vien Santillan is a graduate of the University of the Philippines Diliman with a degree in Architecture.  
 							</p>
 							<p id="paragraph" class="text-center">
-								With his growing passion for the digital arts, he is adept in many design tools and languages that makes him a complete package for everyone's content creation needs.
+								With his growing passion for the digital arts, he is adept in many design tools and languages, making him a complete package for everyone's content creation needs.
 							</p>
 							<p id="paragraph" class="text-center">
-								As a student of Zuitt bootcamp his current love for designing has reached a new level. With that bringing him closer to become a well-rounded full-stack engineer. 
+								As a student of Zuitt bootcamp his current love for design has reached a new level. With that bringing him closer to become a well-rounded full-stack engineer. 
 							</p>
 						</div>
 					</div>
@@ -213,7 +213,7 @@
 									<img class="img-fluid" src="./images/project1.jpg">
 								</div>
 								<div class="card my-3 p-3 row bg-dark text-light">
-									<h2>ARCHITECTURE</h2>
+									<a href="#cardarki"><h2 class="text-light">ARCHITECTURE</h2></a>
 									<p class="text-justify">
 										Working for a small architectural design studio has led Raf to work on a selection of architectural projects— from classy interior design projects to budget-friendly home renovations. His love for designing spaces is his first and one of his true passions. 
 									</p>
@@ -227,9 +227,9 @@
 									<img class="img-fluid" src="./images/project2.jpg">
 								</div>
 								<div class="card my-3 p-3 row bg-danger text-light order-lg-1">
-									<h2>GRAPHIC DESIGN</h2>
+									<a href="#cardgd"><h2 class="text-light">GRAPHIC DESIGN</h2></a>
 									<p class="text-justify">
-										Raf is a co-owner of ToeBeans Studio a graphic design studio focusing on vector art and illustrations for pet lovers. Some of his works include logo design and branding, vector artwoks and, digital presentation projects for companies.
+										Raf is a co-owner of ToeBeans Studio, a graphic design studio focusing on vector art and illustrations for pet lovers. Some of his works include logo design and branding, vector artwoks, and digital presentation projects for companies.
 									</p>
 								</div>
 							</div>
@@ -241,7 +241,7 @@
 									<img class="img-fluid" src="./images/project3.jpg">
 								</div>
 								<div class="card my-3 p-3 row bg-info text-light">
-									<h2>WEB DEVELOPMENT</h2>
+									<a href="#cardwebdev"><h2 class="text-light">WEB DEVELOPMENT</h2></a>
 									<p class="text-justify">
 										Raf is a certified Zuitt Bootcamper. Where he learned to be a full-stack engineer. Currently he is adept in designing front-end web development using HTML, CSS and Bootstrap as well as managing back-end systems through MongoDB, Express, React and Node. 
 
@@ -267,7 +267,7 @@
 
 					<div class="row justify-content-center">
 						<div class="col-md-10 col-sm-12">
-							<div id="card" class="card p-3 m-5">	
+							<div id="cardarki" class="card p-3 m-5">	
 
 								<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 								  <!-- <ol class="carousel-indicators">
@@ -339,7 +339,7 @@
 
 					<div class="row justify-content-center">
 						<div class="col-md-10 col-sm-12">
-							<div id="card" class="card p-3 m-5">	
+							<div id="cardarki" class="card p-3 m-5">	
 
 								<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 								  <!-- <ol class="carousel-indicators">
@@ -399,12 +399,12 @@
 
 					<div class="row justify-content-center">
 						<div class="col-md-10 col-sm-12">
-							<div id="card" class="card p-3 m-5">	
+							<div id="cardgd" class="card p-3 m-5 justify-content-center">	
 								
 								<div class="row">
 									<div class="container d-lg-flex justify-content-center px-lg-5 px-xxl-0">
 										<!-- PROJ 1 -->
-										<div id="proj-gd" class="col-lg-6 col-12  d-flex flex-column">
+										<div id="proj-gd" class="col-lg-6 col-12  d-flex flex-column ml-4">
 											<div class="card my-3 p-3 row bg-light " id="proj-catalog">
 												<img class="img-fluid" src="./images/gd2.jpg">
 												<h4 style="color:black;">Logo Design and Branding</h4>
@@ -445,6 +445,7 @@
 										The design language that I learned from architecture can be easily applied in terms of designing graphic materials. I always make sure to balance everything and create something that is not only aestheticaly appealing but also caters the needs of the client. 
 									</p>
 								</div>
+
 							</div>
 						</div>
 					</div>
@@ -461,12 +462,12 @@
 
 					<div class="row justify-content-center">
 						<div class="col-md-10 col-sm-12">
-							<div id="card" class="card p-3 m-5">	
+							<div id="cardwebdev" class="card p-3 m-5">	
 								<a href="https://s58-s61-csp3-mern-app-bhne.vercel.app">
 									<img class="img-fluid" src="./images/bildr.png" id="folio" >
 								</a>
 								<div id="bildr" class="my-3 p-3 ">
-									<h2>BiLDR</h2>
+									<a href="https://s58-s61-csp3-mern-app-bhne.vercel.app"><h2 class="text-decoration-none">BiLDR</h2></a>
 									<p class="text-justify">
 										Bildr is a mock-up e-commerce MERN application that was built from scratch using all the tools that Zuitt Coding Bootcamp has taught us. It served as our final project in order for us to finish the course. 
 									</p>
