--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 						</div>
 						<div class="row my-5">
 							<div class="col-12">
-								<a href="#cardarki" class="text-dark"><h5 class="py-2" id="text-3">Architecture</h5></a>
-								<a href="#cardgd" class="text-dark"><h5 class="py-2" id="text-3">Graphic Design</h5></a>
-								<a href="#cardwebdev" class="text-dark"><h5 class="py-2" id="text-3">Web Development</h5></a>
+								<a href="#headerarki" class="text-dark"><h5 class="py-2" id="text-3">Architecture</h5></a>
+								<a href="#headergd" class="text-dark"><h5 class="py-2" id="text-3">Graphic Design</h5></a>
+								<a href="#headerwebdev" class="text-dark"><h5 class="py-2" id="text-3">Web Development</h5></a>
 
 							</div>
 						</div>				
@@ -63,7 +63,7 @@
 				<div class="row bg-transparent flex-md-column flex-lg-row mb-4">
 					
 					<div id="socIcon" class="col-lg-4 col-md-4 offset-lg-2 offset-md-4 d-flex justify-content-center align-items-center my-lg-3 my-md-4 child bounce">
-						<a href="https://facebook.com"><img class="img-fluid p-lg-1" src="./images/fb.png"></a>
+						<a href="https://gitlab.com/rafaelvien"><img class="img-fluid p-lg-1" src="./images/gitlab.png"></a>
 					</div>
 					<div id="socIcon" class="col-lg-4 col-md-4 offset-lg-0 offset-md-4 d-flex justify-content-center align-items-center my-lg-3 my-md-4 child bounce ">
 						<a href="https://github.com/rafvien"><img class="img-fluid p-lg-1" src="./images/git.png"></a>
@@ -170,13 +170,13 @@
 						</div>
 						<div id="about-me-text" class="col-10 offset-1 col-md-8 offset-md-2 py-4 bg-info">
 							<p id="paragraph" class="text-center">
-								Rafael Vien Santillan is a graduate of the University of the Philippines Diliman with a degree in Architecture.  
+								Rafael Vien Santillan is a graduate of the University of the Philippines Diliman with a degree in Architecture.
 							</p>
 							<p id="paragraph" class="text-center">
-								With his growing passion for the digital arts, he is adept in many design tools and languages, making him a complete package for everyone's content creation needs.
+								Raf is adept at many design tools and languages. His growing passion for the digital arts makes him a complete package for your content creation needs.
 							</p>
 							<p id="paragraph" class="text-center">
-								As a student of Zuitt bootcamp his current love for design has reached a new level. With that bringing him closer to become a well-rounded full-stack engineer. 
+								As a student of Zuitt Bootcamp, his current love for design has reached a new level. This passion brings him closer and closer to becoming a well-rounded full-stack engineer.
 							</p>
 						</div>
 					</div>
@@ -213,7 +213,7 @@
 									<img class="img-fluid" src="./images/project1.jpg">
 								</div>
 								<div class="card my-3 p-3 row bg-dark text-light">
-									<a href="#cardarki"><h2 class="text-light">ARCHITECTURE</h2></a>
+									<a href="#headerarki"><h2 class="text-light">ARCHITECTURE</h2></a>
 									<p class="text-justify">
 										Working for a small architectural design studio has led Raf to work on a selection of architectural projects— from classy interior design projects to budget-friendly home renovations. His love for designing spaces is his first and one of his true passions. 
 									</p>
@@ -227,7 +227,7 @@
 									<img class="img-fluid" src="./images/project2.jpg">
 								</div>
 								<div class="card my-3 p-3 row bg-danger text-light order-lg-1">
-									<a href="#cardgd"><h2 class="text-light">GRAPHIC DESIGN</h2></a>
+									<a href="#headergd"><h2 class="text-light">GRAPHIC DESIGN</h2></a>
 									<p class="text-justify">
 										Raf is a co-owner of ToeBeans Studio, a graphic design studio focusing on vector art and illustrations for pet lovers. Some of his works include logo design and branding, vector artwoks, and digital presentation projects for companies.
 									</p>
@@ -241,9 +241,9 @@
 									<img class="img-fluid" src="./images/project3.jpg">
 								</div>
 								<div class="card my-3 p-3 row bg-info text-light">
-									<a href="#cardwebdev"><h2 class="text-light">WEB DEVELOPMENT</h2></a>
+									<a href="#headerwebdev"><h2 class="text-light">WEB DEVELOPMENT</h2></a>
 									<p class="text-justify">
-										Raf is a certified Zuitt Bootcamper. Where he learned to be a full-stack engineer. Currently he is adept in designing front-end web development using HTML, CSS and Bootstrap as well as managing back-end systems through MongoDB, Express, React and Node. 
+										Raf is a certified Zuitt Bootcamper. At Zuitt, he learned to be a full-stack engineer. He is now adept at designing front-end web development using HTML, CSS, and Bootstrap, as well as managing back-end systems through MongoDB, Express, React, and Node.
 
 
 									</p>
@@ -255,7 +255,7 @@
 					</div>	
 
 					<!-- arki projs -->
-					<div class="container-fluid">
+					<div id="headerarki" class="container-fluid">
 						<div class="row"> 
 							<div class="col-12 d-flex justify-content-center align-items-center order-1 order-md-2 pt-5">
 								<img class="img-fluid" src="./images/design.png">
@@ -315,10 +315,10 @@
 								<div id="bildr" class="my-3 p-3 ">
 									<h2>Architecture Projects</h2>
 									<p class="text-justify">
-										Working for a start design firm allowed me to handle various different proijects ranging from residential and commercial, budget and high-end projects.  
+										Working for a start up design firm allowed me to handle various different projects. The projects ranged from residential and commercial to budget and high-end projects.
 									</p>
 									<p class="text-justify">
-										Above are some of the notable works that I am involved in the design process as from design conceptualization to model making and rendering up to presentation and construction. 	 
+										Above are some of the notable works where I contributed in the design process. I was involved in the design conceptualization to model making and rendering, and even up to presentation and construction.	 
 									</p>
 								</div>
 							</div>
@@ -376,10 +376,10 @@
 								<div id="bildr" class="my-3 p-3 ">
 									<h2>Office Layout Submission</h2>
 									<p class="text-justify">
-										This was created as a part of an application for a corporate BPO. Everything was designed to cater the brand and personality of the company. 
+										This was created as a part of an application to a corporate BPO. All elements were designed to cater to the brand and personality of the company.
 									</p>
 									<p class="text-justify">
-										Design and concepts are all original and was created in just one week. From planning, to modelling up to presentation.	 
+										Design and concepts were all original and created in just one week. This included planning, modeling, and presentation.
 									</p>
 								</div>
 							</div>
@@ -389,7 +389,7 @@
 
 
 					<!-- graphic design -->
-					<div class="container-fluid">
+					<div id="headergd" class="container-fluid">
 						<div class="row"> 
 							<div class="col-12 d-flex justify-content-center align-items-center order-1 order-md-2 pt-5">
 								<img class="img-fluid" src="./images/gdesign.png">
@@ -442,7 +442,7 @@
 										Venturing into graphic design, I have handled projects ranging from personal commisions and merchandise to logo design and branding infographics for a company that I co-own. In 2021 I also started a small business for vector graphics.
 									</p>
 									<p class="text-justify">
-										The design language that I learned from architecture can be easily applied in terms of designing graphic materials. I always make sure to balance everything and create something that is not only aestheticaly appealing but also caters the needs of the client. 
+										The design language that I learned from architecture can be easily applied in terms of designing graphic materials. I always make sure to balance everything and create something that is not only aestheticaly appealing but also caters to the needs of the client. 
 									</p>
 								</div>
 
@@ -452,7 +452,7 @@
 					<!-- end of graphic design -->
 
 					<!-- bildr -->
-					<div class="container-fluid">
+					<div id="headerwebdev" class="container-fluid">
 						<div class="row"> 
 							<div class="col-12 d-flex justify-content-center align-items-center order-1 order-md-2 pt-5">
 								<img class="img-fluid" src="./images/bildrhead.png">
@@ -469,10 +469,10 @@
 								<div id="bildr" class="my-3 p-3 ">
 									<a href="https://s58-s61-csp3-mern-app-bhne.vercel.app"><h2 class="text-decoration-none">BiLDR</h2></a>
 									<p class="text-justify">
-										Bildr is a mock-up e-commerce MERN application that was built from scratch using all the tools that Zuitt Coding Bootcamp has taught us. It served as our final project in order for us to finish the course. 
+										Bildr is a mock-up e-commerce MERN application that was built from scratch using all the tools that I learned at the Zuitt Coding Bootcamp. This served as my final project as requirement to finish the course.
 									</p>
 									<p class="text-justify">
-										Combining front-end designing and back-end management, this really tested my abilities as a full-stack engineer and it showed how I can merge the designing aspect of web-development and the intricate database management systems of the back-end engineering. 	 
+										Combining front-end designing and back-end management, this tested my abilities as a full-stack engineer. It helped me understand how to merge the designing aspect of web-development and the intricate database management systems of back-end engineering. 	 
 									</p>
 								</div>
 							</div>
@@ -492,7 +492,7 @@
 			<!-- MOBILE SOCIAL LINKS -->
 			<div id="soclinks-mobile" class="row d-block">
 				<nav id="navbar-mobile" class="navbar navbar-light bg-light d-md-none d-flex justify-content-around">
-				  <a href="https://facebook.com"><img width="30px" class="img-fluid" src="./images/fb.png"></a>
+				  <a href="https://gitlab.com/rafaelvien"><img width="30px" class="img-fluid" src="./images/gitlab.png"></a>
 				  <a href="https://github.com/rafvien"><img width="30px" class="img-fluid" src="./images/git.png"></a>
 				  <a href="https://intagram.com/rafaelvien"><img width="30px" class="img-fluid" src="./images/insta.png"></a>
 				  <a href="https://www.linkedin.com/in/rafael-santillan-77b086153/"><img width="30px" class="img-fluid" src="./images/link.png"></a>
