Edit mobile& tablet responsive - GraphicDesign

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 								<div class="row">
 									<div class="container d-lg-flex justify-content-center px-lg-5 px-xxl-0">
 										<!-- PROJ 1 -->
-										<div id="proj-gd" class="col-lg-6 col-12  d-flex flex-column ml-4">
+										<div id="proj-gd" class="col-lg-6 col-12  d-flex flex-column ml-lg-4">
 											<div class="card my-3 p-3 row bg-light " id="proj-catalog">
 												<img class="img-fluid" src="./images/gd2.jpg">
 												<h4 style="color:black;">Logo Design and Branding</h4>
