Edit mobile& tablet responsive - GraphicDesign

--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
 
 
 					<div class="row justify-content-center">
-						<div class="col-md-10 col-sm-12">
-							<div id="cardarki" class="card p-3 m-5">	
+						<div class="col-lg-10 col-sm-12 ">
+							<div id="cardarki" class="card p-3 my-5">	
 
 								<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 								  <!-- <ol class="carousel-indicators">
@@ -339,7 +339,7 @@
 
 					<div class="row justify-content-center">
 						<div class="col-md-10 col-sm-12">
-							<div id="cardarki" class="card p-3 m-5">	
+							<div id="cardarki" class="card p-3 my-5">	
 
 								<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 								  <!-- <ol class="carousel-indicators">
@@ -399,7 +399,7 @@
 
 					<div class="row justify-content-center">
 						<div class="col-md-10 col-sm-12">
-							<div id="cardgd" class="card p-3 m-5 justify-content-center">	
+							<div id="cardgd" class="card p-3 my-5 justify-content-center">	
 								
 								<div class="row">
 									<div class="container d-lg-flex justify-content-center px-lg-5 px-xxl-0">
@@ -462,7 +462,7 @@
 
 					<div class="row justify-content-center">
 						<div class="col-md-10 col-sm-12">
-							<div id="cardwebdev" class="card p-3 m-5">	
+							<div id="cardwebdev" class="card p-3 my-5">	
 								<a href="https://s58-s61-csp3-mern-app-bhne.vercel.app">
 									<img class="img-fluid" src="./images/bildr.png" id="folio" >
 								</a>
