Edit mobile& tablet responsive - GraphicDesign

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
 
 					<div class="row justify-content-center">
-						<div class="col-md-10 col-sm-12">
+						<div class="col-lg-10 col-sm-12">
 							<div id="cardarki" class="card p-3 my-5">	
 
 								<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -398,7 +398,7 @@
 					</div>
 
 					<div class="row justify-content-center">
-						<div class="col-md-10 col-sm-12">
+						<div class="col-lg-10 col-sm-12">
 							<div id="cardgd" class="card p-3 my-5 justify-content-center">	
 								
 								<div class="row">
@@ -461,7 +461,7 @@
 					</div>
 
 					<div class="row justify-content-center">
-						<div class="col-md-10 col-sm-12">
+						<div class="col-lg-10 col-sm-12">
 							<div id="cardwebdev" class="card p-3 my-5">	
 								<a href="https://s58-s61-csp3-mern-app-bhne.vercel.app">
 									<img class="img-fluid" src="./images/bildr.png" id="folio" >
