--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
 				<!-- end of HEADER text -->
 
 				<!-- SOCMED Links -->
-				<div class="row bg-transparent flex-md-column flex-lg-row mb-4">
+				<div class="row bg-transparent flex-lg-row mb-xl-0">
 					
-					<div id="socIcon" class="col-lg-4 col-md-4 offset-lg-2 offset-md-4 d-flex justify-content-center align-items-center my-lg-3 my-md-4 child bounce">
+					<div id="socIcon" class="col-lg-4 col-md-4 offset-lg-2 offset-md-4 d-flex justify-content-center align-items-center my-lg-1 my-md-1  child bounce">
 						<a href="https://gitlab.com/rafaelvien"><img class="img-fluid p-lg-1" src="./images/gitlab.png"></a>
 					</div>
-					<div id="socIcon" class="col-lg-4 col-md-4 offset-lg-0 offset-md-4 d-flex justify-content-center align-items-center my-lg-3 my-md-4 child bounce ">
+					<div id="socIcon" class="col-lg-4 col-md-4 offset-lg-0 offset-md-4 d-flex justify-content-center align-items-center my-lg-1 my-md-1  child bounce ">
 						<a href="https://github.com/rafvien"><img class="img-fluid p-lg-1" src="./images/git.png"></a>
 					</div>
 
-					<div id="socIcon" class="col-lg-4 col-md-4 offset-lg-2 offset-md-4 d-flex justify-content-center align-items-center my-lg-3 my-md-4 child bounce ">
+					<div id="socIcon" class="col-lg-4 col-md-4 offset-lg-2 offset-md-4 d-flex justify-content-center align-items-center my-lg-1 my-md-1  child bounce ">
 						<a href="https://www.instagram.com/rafaelvien/"><img class="img-fluid p-lg-1" src="./images/insta.png"></a>
 					</div>
-					<div id="socIcon" class="col-lg-4 col-md-4 offset-lg-0 offset-md-4 d-flex justify-content-center align-items-center my-lg-3 my-md-4 child bounce ">
+					<div id="socIcon" class="col-lg-4 col-md-4 offset-lg-0 offset-md-4 d-flex justify-content-center align-items-center my-lg-1 my-md-1  child bounce ">
 						<a href="https://www.linkedin.com/in/rafael-santillan-77b086153/"><img class="img-fluid p-lg-1" src="./images/link.png"></a>
 					</div>
 					
@@ -80,7 +80,7 @@
 				<!-- end of SOCMED Links -->
 
 				<!-- WEBPAGE hotlinks -->
-				<div id="hotlinks" class="row bg-transparent d-flex flex-column justify-content-center align-items-center mt-4 mb-4 py-3 ">
+				<div id="hotlinks" class="row bg-transparent d-flex flex-column justify-content-center align-items-center mt-xl-auto mb-4 py-3 ">
 					<div class="card-header col text-center" >
 						<a href="#landing"><button class="btn text-light btn-outline-secondary btn-home">Home</button></a>
 					</div>	
