Added update: Everless project

--- a/index.html
+++ b/index.html
@@ -480,6 +480,35 @@
 					</div>
 					<!-- end of bildr -->
 
+					<!-- EVERLESS -->
+					<div id="headerwebdev" class="container-fluid">
+						<div class="row"> 
+							<div class="col-12 d-flex justify-content-center align-items-center order-1 order-md-2 pt-5">
+								<img class="img-fluid" src="./images/everlesshead.png">
+							</div>
+						</div>
+					</div>
+
+					<div class="row justify-content-center">
+						<div class="col-lg-10 col-sm-12">
+							<div id="cardwebdev" class="card p-3 my-5">	
+								<a href="https://everless.com">
+									<img class="img-fluid" src="./images/EVERLESS.png" id="folio" >
+								</a>
+								<div id="bildr" class="my-3 p-3 ">
+									<a href="https://everless.com"><h2 class="text-decoration-none">EVERLESS</h2></a>
+									<p class="text-justify">
+										Everless is an innovative SmartBag solution to single-use plastics. It's a well-engineered product that has an autofold technology that makes it shrink into a size of credit card.
+									</p>
+									<p class="text-justify">
+										This is an e-commerce application and the whole site creation was handled was handled individually, from design layout, product visualization,and web-site development. This was made possible by a combination of a third party website builder and customized code for an added functionality. This is a freelance project taking around 40 hours to complete. 
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end of everless -->
+
 
 					
 
